@@ -1,3 +1,8 @@
+2008-11-11  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/utils/httpcache.py: respect XDG_CACHE_HOME for cached
+	modulesets.  (closes: #560092, patch by James Sharpe)
+
 2008-11-11  Christian Persch  <chpe@gnome.org>
 
 	* modulesets/gnome-2.22.modules:
